--- a/PTI/SPCK/GUI/mainnote.ui
+++ b/PTI/SPCK/GUI/mainnote.ui
@@ -242,7 +242,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>850</x>
-      <y>500</y>
+      <y>510</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -259,9 +259,9 @@ p, li { white-space: pre-wrap; }
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>210</x>
+      <x>180</x>
       <y>140</y>
-      <width>131</width>
+      <width>151</width>
       <height>21</height>
      </rect>
     </property>
@@ -271,7 +271,7 @@ p, li { white-space: pre-wrap; }
      </font>
     </property>
     <property name="text">
-     <string>April Test Release</string>
+     <string>Finall April Test Release</string>
     </property>
    </widget>
    <widget class="Line" name="line_2">
@@ -291,7 +291,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>820</x>
-      <y>460</y>
+      <y>420</y>
       <width>181</width>
       <height>20</height>
      </rect>
@@ -304,13 +304,31 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>810</x>
-      <y>470</y>
+      <y>430</y>
       <width>20</width>
-      <height>181</height>
+      <height>221</height>
      </rect>
     </property>
     <property name="orientation">
      <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="bt_font">
+    <property name="geometry">
+     <rect>
+      <x>850</x>
+      <y>440</y>
+      <width>121</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Font</string>
     </property>
    </widget>
    <zorder>line_2</zorder>
@@ -331,6 +349,7 @@ p, li { white-space: pre-wrap; }
    <zorder>label_3</zorder>
    <zorder>line</zorder>
    <zorder>line_3</zorder>
+   <zorder>bt_font</zorder>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
