--- a/PTI/SPCK/GUI/AdminPage.ui
+++ b/PTI/SPCK/GUI/AdminPage.ui
@@ -226,7 +226,7 @@ p, li { white-space: pre-wrap; }
      </font>
     </property>
     <property name="text">
-     <string>Finall April Test Release</string>
+     <string>Final April Test Release</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
