--- a/PTI/SPCK/GUI/AdminPage.ui
+++ b/PTI/SPCK/GUI/AdminPage.ui
@@ -214,7 +214,7 @@ p, li { white-space: pre-wrap; }
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>150</x>
+      <x>140</x>
       <y>150</y>
       <width>151</width>
       <height>21</height>
@@ -226,7 +226,7 @@ p, li { white-space: pre-wrap; }
      </font>
     </property>
     <property name="text">
-     <string>Final April Test Release</string>
+     <string>First Public RTM Release</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
