--- a/PTI/SPCK/GUI/dangnhap.ui
+++ b/PTI/SPCK/GUI/dangnhap.ui
@@ -176,30 +176,6 @@
      <string>Need an account?</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_6">
-    <property name="geometry">
-     <rect>
-      <x>200</x>
-      <y>320</y>
-      <width>141</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>9</pointsize>
-     </font>
-    </property>
-    <property name="cursor">
-     <cursorShape>PointingHandCursor</cursorShape>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">color: rgb(85, 0, 255);</string>
-    </property>
-    <property name="text">
-     <string>Forgot your password?</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
@@ -227,7 +203,7 @@
       <x>420</x>
       <y>90</y>
       <width>20</width>
-      <height>281</height>
+      <height>271</height>
      </rect>
     </property>
     <property name="orientation">
@@ -311,6 +287,26 @@ border-radius: 15px;</string>
     <property name="text">
      <string>Continue 
 without login</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="bt_forgot">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>320</y>
+      <width>121</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(85, 0, 255);
+border-radius: 15px;</string>
+    </property>
+    <property name="text">
+     <string>Forgot your password?</string>
     </property>
    </widget>
   </widget>
