--- a/PTI/SPCK/GUI/Setup2.ui
+++ b/PTI/SPCK/GUI/Setup2.ui
@@ -25,7 +25,7 @@
     <property name="geometry">
      <rect>
       <x>160</x>
-      <y>270</y>
+      <y>280</y>
       <width>221</width>
       <height>20</height>
      </rect>
@@ -117,9 +117,17 @@
      <rect>
       <x>180</x>
       <y>170</y>
-      <width>141</width>
-      <height>22</height>
+      <width>151</width>
+      <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="currentIndex">
+     <number>0</number>
     </property>
     <item>
      <property name="text">
@@ -131,25 +139,23 @@
       <string>English</string>
      </property>
     </item>
-    <item>
-     <property name="text">
-      <string>Vietnam</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>French</string>
-     </property>
-    </item>
    </widget>
    <widget class="QComboBox" name="cb_edition">
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>230</y>
-      <width>141</width>
-      <height>22</height>
+      <y>240</y>
+      <width>151</width>
+      <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="currentIndex">
+     <number>0</number>
     </property>
     <item>
      <property name="text">
@@ -189,7 +195,7 @@
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>200</y>
+      <y>210</y>
       <width>191</width>
       <height>21</height>
      </rect>
