--- a/PTI/SPCK/GUI/create.ui
+++ b/PTI/SPCK/GUI/create.ui
@@ -6,25 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>540</width>
-    <height>419</height>
+    <width>498</width>
+    <height>440</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Note for WOW! Setup</string>
-  </property>
-  <property name="windowIcon">
-   <iconset>
-    <normaloff>../Material/3cc089d557f24e431b1cd45ab88d2f1f86d7d2615157b96a7f61c37ec7b25663_100.webp</normaloff>../Material/3cc089d557f24e431b1cd45ab88d2f1f86d7d2615157b96a7f61c37ec7b25663_100.webp</iconset>
+   <string>Create new Notes!</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>40</y>
-      <width>411</width>
-      <height>31</height>
+      <x>140</x>
+      <y>30</y>
+      <width>241</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="font">
@@ -33,89 +29,99 @@
      </font>
     </property>
     <property name="text">
-     <string>             Note for WOW!</string>
+     <string>Create new Notes</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_9">
+   <widget class="QLineEdit" name="le_name">
     <property name="geometry">
      <rect>
-      <x>390</x>
-      <y>20</y>
-      <width>51</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="pixmap">
-     <pixmap>../Material/3cc089d557f24e431b1cd45ab88d2f1f86d7d2615157b96a7f61c37ec7b25663_100.webp</pixmap>
-    </property>
-    <property name="scaledContents">
-     <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_3">
-    <property name="geometry">
-     <rect>
-      <x>170</x>
-      <y>20</y>
-      <width>71</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>9</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Welcome to</string>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="rb_portable">
-    <property name="geometry">
-     <rect>
-      <x>150</x>
-      <y>190</y>
-      <width>111</width>
+      <x>70</x>
+      <y>210</y>
+      <width>341</width>
       <height>31</height>
      </rect>
     </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Portable Mode</string>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="rb_install">
-    <property name="geometry">
-     <rect>
-      <x>150</x>
-      <y>230</y>
-      <width>281</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Installation mode</string>
+    <property name="placeholderText">
+     <string>You can edit this information</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>130</y>
-      <width>301</width>
-      <height>41</height>
+      <x>70</x>
+      <y>250</y>
+      <width>111</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Note type:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>110</y>
+      <width>111</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Title name:</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="le_title">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>140</y>
+      <width>341</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="placeholderText">
+     <string>You can edit this information</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>180</y>
+      <width>111</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Name:</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="cb_type">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>280</y>
+      <width>131</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -123,17 +129,27 @@
       <pointsize>12</pointsize>
      </font>
     </property>
-    <property name="text">
-     <string>Choose the program's installation type:</string>
+    <property name="currentText">
+     <string extracomment="Please choose note type!">- - -</string>
     </property>
+    <item>
+     <property name="text">
+      <string>- - -</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Document</string>
+     </property>
+    </item>
    </widget>
-   <widget class="QPushButton" name="bt_next">
+   <widget class="QPushButton" name="bt_close">
     <property name="geometry">
      <rect>
-      <x>430</x>
+      <x>190</x>
       <y>340</y>
-      <width>91</width>
-      <height>31</height>
+      <width>121</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="font">
@@ -142,7 +158,7 @@
      </font>
     </property>
     <property name="text">
-     <string>Next</string>
+     <string>Create</string>
     </property>
    </widget>
   </widget>
@@ -151,7 +167,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>540</width>
+     <width>498</width>
      <height>21</height>
     </rect>
    </property>
