--- a/PTI/SPCK/GUI/dangnhap.ui
+++ b/PTI/SPCK/GUI/dangnhap.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>742</width>
-    <height>439</height>
+    <width>804</width>
+    <height>576</height>
    </rect>
   </property>
   <property name="cursor">
@@ -26,8 +26,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>30</y>
+      <x>280</x>
+      <y>40</y>
       <width>331</width>
       <height>51</height>
      </rect>
@@ -44,97 +44,11 @@
      <string>Welcome Back!</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>60</x>
-      <y>100</y>
-      <width>171</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">color: rgb(255, 0, 4);</string>
-    </property>
-    <property name="text">
-     <string>EMAIL OR PHONE NUMBER</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="le_email">
-    <property name="geometry">
-     <rect>
-      <x>60</x>
-      <y>120</y>
-      <width>351</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 255, 255);</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="placeholderText">
-     <string>Nhập tài khoản/số điện thoại của bạn vào đây!</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_3">
-    <property name="geometry">
-     <rect>
-      <x>60</x>
-      <y>160</y>
-      <width>141</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">color: rgb(255, 0, 4);</string>
-    </property>
-    <property name="text">
-     <string>PASSWORD</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="le_password">
-    <property name="geometry">
-     <rect>
-      <x>60</x>
-      <y>180</y>
-      <width>351</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="cursor">
-     <cursorShape>IBeamCursor</cursorShape>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 255, 255);</string>
-    </property>
-    <property name="echoMode">
-     <enum>QLineEdit::Password</enum>
-    </property>
-    <property name="placeholderText">
-     <string>Nhập mật khẩu của bạn vào đây!</string>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="checkBox">
-    <property name="geometry">
-     <rect>
-      <x>60</x>
-      <y>220</y>
-      <width>231</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Remember to log in for this account</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="bt_login">
+   <widget class="QPushButton" name="bt_google">
     <property name="geometry">
      <rect>
       <x>100</x>
-      <y>250</y>
+      <y>170</y>
       <width>281</width>
       <height>51</height>
      </rect>
@@ -155,14 +69,14 @@
      <string notr="true"/>
     </property>
     <property name="text">
-     <string>Log In</string>
+     <string>Google</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>320</y>
+      <x>410</x>
+      <y>490</y>
       <width>121</width>
       <height>16</height>
      </rect>
@@ -173,14 +87,14 @@
      </font>
     </property>
     <property name="text">
-     <string>Need an account?</string>
+     <string>Tools:</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>500</x>
-      <y>90</y>
+      <x>540</x>
+      <y>140</y>
       <width>191</width>
       <height>20</height>
      </rect>
@@ -200,10 +114,10 @@
    <widget class="Line" name="line">
     <property name="geometry">
      <rect>
-      <x>420</x>
-      <y>90</y>
+      <x>440</x>
+      <y>120</y>
       <width>20</width>
-      <height>271</height>
+      <height>341</height>
      </rect>
     </property>
     <property name="orientation">
@@ -213,8 +127,8 @@
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>480</x>
-      <y>120</y>
+      <x>520</x>
+      <y>170</y>
       <width>201</width>
       <height>231</height>
      </rect>
@@ -232,8 +146,8 @@
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>420</x>
-      <y>380</y>
+      <x>470</x>
+      <y>420</y>
       <width>371</width>
       <height>16</height>
      </rect>
@@ -253,8 +167,8 @@
    <widget class="QPushButton" name="bt_register">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>340</y>
+      <x>220</x>
+      <y>510</y>
       <width>121</width>
       <height>31</height>
      </rect>
@@ -273,8 +187,8 @@ border-radius: 15px;</string>
    <widget class="QPushButton" name="bt_continue">
     <property name="geometry">
      <rect>
-      <x>630</x>
-      <y>10</y>
+      <x>700</x>
+      <y>20</y>
       <width>91</width>
       <height>41</height>
      </rect>
@@ -292,10 +206,10 @@ without login</string>
    <widget class="QPushButton" name="bt_forgot">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>320</y>
+      <x>360</x>
+      <y>510</y>
       <width>121</width>
-      <height>21</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="cursor">
@@ -309,6 +223,161 @@ border-radius: 15px;</string>
      <string>Forgot your password?</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="bt_outlook">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>240</y>
+      <width>281</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Tahoma</family>
+      <pointsize>16</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>ArrowCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="text">
+     <string>Outlook</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="bt_apple">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>310</y>
+      <width>281</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Tahoma</family>
+      <pointsize>16</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>ArrowCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="text">
+     <string>Apple</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="bt_microsoft">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>380</y>
+      <width>281</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Tahoma</family>
+      <pointsize>16</pointsize>
+      <weight>50</weight>
+      <italic>false</italic>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>ArrowCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="text">
+     <string>Microsoft</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>120</y>
+      <width>361</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(255, 0, 4);</string>
+    </property>
+    <property name="text">
+     <string>Please select the account type you want to
+sign in with below:</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="bt_admin">
+    <property name="geometry">
+     <rect>
+      <x>510</x>
+      <y>510</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(85, 0, 255);
+border-radius: 15px;</string>
+    </property>
+    <property name="text">
+     <string>Admin Sign In</string>
+    </property>
+   </widget>
+   <widget class="Line" name="line_2">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>470</y>
+      <width>691</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <zorder>label</zorder>
+   <zorder>bt_google</zorder>
+   <zorder>label_4</zorder>
+   <zorder>label_7</zorder>
+   <zorder>label_8</zorder>
+   <zorder>label_9</zorder>
+   <zorder>bt_register</zorder>
+   <zorder>bt_continue</zorder>
+   <zorder>bt_forgot</zorder>
+   <zorder>bt_outlook</zorder>
+   <zorder>bt_apple</zorder>
+   <zorder>bt_microsoft</zorder>
+   <zorder>label_2</zorder>
+   <zorder>bt_admin</zorder>
+   <zorder>line_2</zorder>
+   <zorder>line</zorder>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QMenuBar" name="menuBar">
@@ -316,7 +385,7 @@ border-radius: 15px;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>742</width>
+     <width>804</width>
      <height>21</height>
     </rect>
    </property>
