--- a/PTI/SPCK/GUI/font.ui
+++ b/PTI/SPCK/GUI/font.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Customize fonts tools</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="label">
@@ -78,9 +78,33 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
     <property name="styleSheet">
      <string notr="true">background-color: rgb(255, 255, 255);</string>
     </property>
+    <property name="editable">
+     <bool>true</bool>
+    </property>
+    <property name="currentText">
+     <string>6</string>
+    </property>
+    <property name="currentIndex">
+     <number>0</number>
+    </property>
+    <item>
+     <property name="text">
+      <string>6</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>7</string>
+     </property>
+    </item>
     <item>
      <property name="text">
       <string>8</string>
@@ -108,17 +132,7 @@
     </item>
     <item>
      <property name="text">
-      <string>13</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
       <string>14</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>15</string>
      </property>
     </item>
     <item>
@@ -128,17 +142,7 @@
     </item>
     <item>
      <property name="text">
-      <string>17</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
       <string>18</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>19</string>
      </property>
     </item>
     <item>
@@ -148,17 +152,7 @@
     </item>
     <item>
      <property name="text">
-      <string>21</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
       <string>22</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>23</string>
      </property>
     </item>
     <item>
@@ -168,17 +162,7 @@
     </item>
     <item>
      <property name="text">
-      <string>25</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
       <string>26</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>27</string>
      </property>
     </item>
     <item>
@@ -188,92 +172,17 @@
     </item>
     <item>
      <property name="text">
-      <string>29</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>30</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>31</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>32</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>33</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>34</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>35</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
       <string>36</string>
      </property>
     </item>
     <item>
      <property name="text">
-      <string>37</string>
+      <string>48</string>
      </property>
     </item>
     <item>
      <property name="text">
-      <string>38</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>39</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>40</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>41</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>42</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>43</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>44</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>45</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>46</string>
+      <string>72</string>
      </property>
     </item>
    </widget>
