--- a/PTI/SPCK/GUI/setting.ui
+++ b/PTI/SPCK/GUI/setting.ui
@@ -7,11 +7,11 @@
     <x>0</x>
     <y>0</y>
     <width>947</width>
-    <height>571</height>
+    <height>590</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Setting App - Note for WOW! Application</string>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(220, 220, 220);</string>
@@ -65,6 +65,11 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
     <property name="styleSheet">
      <string notr="true">background-color: rgb(255, 255, 255);</string>
     </property>
@@ -114,6 +119,11 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
     <property name="styleSheet">
      <string notr="true">background-color: rgb(255, 255, 255);</string>
     </property>
@@ -125,16 +135,6 @@
     <item>
      <property name="text">
       <string>English</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Vietnam</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>French</string>
      </property>
     </item>
    </widget>
@@ -165,6 +165,11 @@
       <height>31</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
     <property name="styleSheet">
      <string notr="true">background-color: rgb(255, 255, 255);</string>
     </property>
@@ -187,8 +192,8 @@
    <widget class="QPushButton" name="bt_save">
     <property name="geometry">
      <rect>
-      <x>440</x>
-      <y>490</y>
+      <x>430</x>
+      <y>510</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -208,7 +213,7 @@
       <x>500</x>
       <y>140</y>
       <width>16</width>
-      <height>331</height>
+      <height>351</height>
      </rect>
     </property>
     <property name="orientation">
@@ -240,7 +245,7 @@
     <property name="geometry">
      <rect>
       <x>570</x>
-      <y>330</y>
+      <y>350</y>
       <width>131</width>
       <height>51</height>
      </rect>
@@ -259,7 +264,7 @@
     <property name="geometry">
      <rect>
       <x>570</x>
-      <y>400</y>
+      <y>420</y>
       <width>131</width>
       <height>51</height>
      </rect>
@@ -302,7 +307,7 @@ Notes pages</string>
     <property name="geometry">
      <rect>
       <x>580</x>
-      <y>290</y>
+      <y>310</y>
       <width>131</width>
       <height>31</height>
      </rect>
@@ -501,9 +506,33 @@ Notes pages</string>
       <height>31</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
     <property name="styleSheet">
      <string notr="true">background-color: rgb(255, 255, 255);</string>
     </property>
+    <property name="editable">
+     <bool>true</bool>
+    </property>
+    <property name="currentText">
+     <string>6</string>
+    </property>
+    <property name="currentIndex">
+     <number>0</number>
+    </property>
+    <item>
+     <property name="text">
+      <string>6</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>7</string>
+     </property>
+    </item>
     <item>
      <property name="text">
       <string>8</string>
@@ -531,17 +560,7 @@ Notes pages</string>
     </item>
     <item>
      <property name="text">
-      <string>13</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
       <string>14</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>15</string>
      </property>
     </item>
     <item>
@@ -551,17 +570,7 @@ Notes pages</string>
     </item>
     <item>
      <property name="text">
-      <string>17</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
       <string>18</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>19</string>
      </property>
     </item>
     <item>
@@ -571,17 +580,7 @@ Notes pages</string>
     </item>
     <item>
      <property name="text">
-      <string>21</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
       <string>22</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>23</string>
      </property>
     </item>
     <item>
@@ -591,17 +590,7 @@ Notes pages</string>
     </item>
     <item>
      <property name="text">
-      <string>25</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
       <string>26</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>27</string>
      </property>
     </item>
     <item>
@@ -611,94 +600,118 @@ Notes pages</string>
     </item>
     <item>
      <property name="text">
-      <string>29</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>30</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>31</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>32</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>33</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>34</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>35</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
       <string>36</string>
      </property>
     </item>
     <item>
      <property name="text">
-      <string>37</string>
+      <string>48</string>
      </property>
     </item>
     <item>
      <property name="text">
-      <string>38</string>
+      <string>72</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="QLabel" name="label_11">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>390</y>
+      <width>191</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Input Method:</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="cb_edition_3">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>420</y>
+      <width>171</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);</string>
+    </property>
+    <item>
+     <property name="text">
+      <string>- - -</string>
      </property>
     </item>
     <item>
      <property name="text">
-      <string>39</string>
+      <string>English (US)</string>
      </property>
     </item>
     <item>
      <property name="text">
-      <string>40</string>
+      <string>English (International)</string>
      </property>
     </item>
     <item>
      <property name="text">
-      <string>41</string>
+      <string>Vietnamese</string>
      </property>
     </item>
-    <item>
-     <property name="text">
-      <string>42</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>43</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>44</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>45</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>46</string>
-     </property>
-    </item>
+   </widget>
+   <widget class="QCheckBox" name="chb_read_2">
+    <property name="geometry">
+     <rect>
+      <x>580</x>
+      <y>270</y>
+      <width>141</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Note page title name</string>
+    </property>
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+    <property name="checked">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="bt_about">
+    <property name="geometry">
+     <rect>
+      <x>810</x>
+      <y>10</y>
+      <width>121</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>About
+Note for WOW!</string>
+    </property>
    </widget>
    <zorder>label_2</zorder>
    <zorder>label_8</zorder>
@@ -723,6 +736,10 @@ Notes pages</string>
    <zorder>label_9</zorder>
    <zorder>label_10</zorder>
    <zorder>comboBox</zorder>
+   <zorder>label_11</zorder>
+   <zorder>cb_edition_3</zorder>
+   <zorder>chb_read_2</zorder>
+   <zorder>bt_about</zorder>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
