feat Update SPCK Dev Build 205

--- a/PTI/SPCK/GUI/editNote2.ui
+++ b/PTI/SPCK/GUI/editNote2.ui
@@ -74,7 +74,7 @@
     </property>
     <property name="font">
      <font>
-      <family>Consolas</family>
+      <family>Tahoma</family>
       <pointsize>15</pointsize>
      </font>
     </property>
