--- a/PTI/SPCK/GUI/AdminPage.ui
+++ b/PTI/SPCK/GUI/AdminPage.ui
@@ -82,8 +82,7 @@
      </font>
     </property>
     <property name="text">
-     <string>Discard change
-and Exit</string>
+     <string>Close Application</string>
     </property>
    </widget>
    <widget class="QTextBrowser" name="textBrowser">
@@ -214,9 +213,9 @@ p, li { white-space: pre-wrap; }
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>110</x>
       <y>150</y>
-      <width>181</width>
+      <width>211</width>
       <height>21</height>
      </rect>
     </property>
@@ -226,7 +225,7 @@ p, li { white-space: pre-wrap; }
      </font>
     </property>
     <property name="text">
-     <string>Beta Test Release - Build 2504</string>
+     <string>Developer Test Release - Build 205</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
