--- a/PTI/SPCK/GUI/about.ui
+++ b/PTI/SPCK/GUI/about.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>556</width>
-    <height>368</height>
+    <width>580</width>
+    <height>373</height>
    </rect>
   </property>
   <property name="font">
@@ -22,7 +22,7 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>250</x>
+      <x>270</x>
       <y>20</y>
       <width>101</width>
       <height>31</height>
@@ -40,7 +40,7 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>120</x>
+      <x>140</x>
       <y>30</y>
       <width>331</width>
       <height>61</height>
@@ -78,7 +78,7 @@
      <rect>
       <x>50</x>
       <y>170</y>
-      <width>281</width>
+      <width>291</width>
       <height>51</height>
      </rect>
     </property>
@@ -88,8 +88,7 @@
      </font>
     </property>
     <property name="text">
-     <string>Version:   Beta Release Version 2504
-                    Testing Edition x64</string>
+     <string>Version: Developer Test Release - Build 205</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_7">
@@ -113,10 +112,10 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>380</x>
+      <x>400</x>
       <y>150</y>
-      <width>121</width>
-      <height>121</height>
+      <width>131</width>
+      <height>131</height>
      </rect>
     </property>
     <property name="text">
@@ -132,9 +131,9 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>370</x>
+      <x>380</x>
       <y>120</y>
-      <width>161</width>
+      <width>181</width>
       <height>31</height>
      </rect>
     </property>
@@ -144,13 +143,13 @@
      </font>
     </property>
     <property name="text">
-     <string>Secure by Security App</string>
+     <string>Secured by Green Security</string>
     </property>
    </widget>
    <widget class="Line" name="line">
     <property name="geometry">
      <rect>
-      <x>330</x>
+      <x>350</x>
       <y>120</y>
       <width>20</width>
       <height>151</height>
@@ -163,7 +162,7 @@
    <widget class="QPushButton" name="bt_ok">
     <property name="geometry">
      <rect>
-      <x>230</x>
+      <x>250</x>
       <y>290</y>
       <width>91</width>
       <height>41</height>
@@ -185,7 +184,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>556</width>
+     <width>580</width>
      <height>21</height>
     </rect>
    </property>
