--- a/PTI/SPCK/GUI/font.ui
+++ b/PTI/SPCK/GUI/font.ui
@@ -18,7 +18,7 @@
     <property name="geometry">
      <rect>
       <x>140</x>
-      <y>30</y>
+      <y>40</y>
       <width>261</width>
       <height>41</height>
      </rect>
@@ -66,7 +66,7 @@
      <string notr="true">background-color: rgb(255, 255, 255);</string>
     </property>
     <property name="currentText">
-     <string>Consolas</string>
+     <string>Tahoma</string>
     </property>
    </widget>
    <widget class="QComboBox" name="comboBox">
