--- a/PTI/SPCK/GUI/AdminPage.ui
+++ b/PTI/SPCK/GUI/AdminPage.ui
@@ -120,7 +120,7 @@ p, li { white-space: pre-wrap; }
      </font>
     </property>
     <property name="text">
-     <string>Tools</string>
+     <string>Manage</string>
     </property>
    </widget>
    <widget class="QPushButton" name="bt_tool2">
@@ -138,7 +138,7 @@ p, li { white-space: pre-wrap; }
      </font>
     </property>
     <property name="text">
-     <string>Tools</string>
+     <string>Manage</string>
     </property>
    </widget>
    <widget class="QTextBrowser" name="textBrowser_2">
@@ -225,7 +225,7 @@ p, li { white-space: pre-wrap; }
      </font>
     </property>
     <property name="text">
-     <string>Developer Test Release - Build 305</string>
+     <string>Developer Test Release - Build 705</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
