--- a/PTI/SPCK/GUI/dangnhap.ui
+++ b/PTI/SPCK/GUI/dangnhap.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>804</width>
-    <height>576</height>
+    <height>502</height>
    </rect>
   </property>
   <property name="cursor">
@@ -44,11 +44,11 @@
      <string>Welcome back to</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="bt_google">
+   <widget class="QPushButton" name="bt_start">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>170</y>
+      <x>90</x>
+      <y>220</y>
       <width>281</width>
       <height>51</height>
      </rect>
@@ -69,14 +69,14 @@
      <string notr="true"/>
     </property>
     <property name="text">
-     <string>Google</string>
+     <string>Let's start!</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>490</y>
+      <x>210</x>
+      <y>360</y>
       <width>121</width>
       <height>16</height>
      </rect>
@@ -167,8 +167,8 @@
    <widget class="QPushButton" name="bt_register">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>510</y>
+      <x>20</x>
+      <y>380</y>
       <width>121</width>
       <height>31</height>
      </rect>
@@ -206,8 +206,8 @@ without login</string>
    <widget class="QPushButton" name="bt_forgot">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>510</y>
+      <x>160</x>
+      <y>380</y>
       <width>121</width>
       <height>31</height>
      </rect>
@@ -223,95 +223,11 @@ border-radius: 15px;</string>
      <string>Forgot your password?</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="bt_outlook">
-    <property name="geometry">
-     <rect>
-      <x>100</x>
-      <y>240</y>
-      <width>281</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Tahoma</family>
-      <pointsize>16</pointsize>
-      <weight>50</weight>
-      <italic>false</italic>
-      <bold>false</bold>
-     </font>
-    </property>
-    <property name="cursor">
-     <cursorShape>ArrowCursor</cursorShape>
-    </property>
-    <property name="styleSheet">
-     <string notr="true"/>
-    </property>
-    <property name="text">
-     <string>Outlook</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="bt_apple">
-    <property name="geometry">
-     <rect>
-      <x>100</x>
-      <y>310</y>
-      <width>281</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Tahoma</family>
-      <pointsize>16</pointsize>
-      <weight>50</weight>
-      <italic>false</italic>
-      <bold>false</bold>
-     </font>
-    </property>
-    <property name="cursor">
-     <cursorShape>ArrowCursor</cursorShape>
-    </property>
-    <property name="styleSheet">
-     <string notr="true"/>
-    </property>
-    <property name="text">
-     <string>Apple</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="bt_microsoft">
-    <property name="geometry">
-     <rect>
-      <x>100</x>
-      <y>380</y>
-      <width>281</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Tahoma</family>
-      <pointsize>16</pointsize>
-      <weight>50</weight>
-      <italic>false</italic>
-      <bold>false</bold>
-     </font>
-    </property>
-    <property name="cursor">
-     <cursorShape>ArrowCursor</cursorShape>
-    </property>
-    <property name="styleSheet">
-     <string notr="true"/>
-    </property>
-    <property name="text">
-     <string>Microsoft</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>120</y>
+      <x>60</x>
+      <y>140</y>
       <width>361</width>
       <height>41</height>
      </rect>
@@ -325,15 +241,14 @@ border-radius: 15px;</string>
      <string notr="true">color: rgb(255, 0, 4);</string>
     </property>
     <property name="text">
-     <string>Please select the account type you want to
-sign in with below:</string>
+     <string>If you're ready to log in, click the button below!</string>
     </property>
    </widget>
    <widget class="QPushButton" name="bt_admin">
     <property name="geometry">
      <rect>
-      <x>510</x>
-      <y>510</y>
+      <x>310</x>
+      <y>380</y>
       <width>121</width>
       <height>31</height>
      </rect>
@@ -352,9 +267,9 @@ border-radius: 15px;</string>
    <widget class="Line" name="line_2">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>470</y>
-      <width>691</width>
+      <x>50</x>
+      <y>330</y>
+      <width>361</width>
       <height>16</height>
      </rect>
     </property>
@@ -383,7 +298,7 @@ border-radius: 15px;</string>
      <string>Note for WOW! Application</string>
     </property>
    </widget>
-   <zorder>bt_google</zorder>
+   <zorder>bt_start</zorder>
    <zorder>label_4</zorder>
    <zorder>label_7</zorder>
    <zorder>label_8</zorder>
@@ -391,9 +306,6 @@ border-radius: 15px;</string>
    <zorder>bt_register</zorder>
    <zorder>bt_continue</zorder>
    <zorder>bt_forgot</zorder>
-   <zorder>bt_outlook</zorder>
-   <zorder>bt_apple</zorder>
-   <zorder>bt_microsoft</zorder>
    <zorder>label_2</zorder>
    <zorder>bt_admin</zorder>
    <zorder>line_2</zorder>
