--- a/PTI/SPCK/GUI/admin.ui
+++ b/PTI/SPCK/GUI/admin.ui
@@ -164,7 +164,7 @@
      </font>
     </property>
     <property name="text">
-     <string>Powered by Google Inc. - Google email</string>
+     <string>         Powered by Google email</string>
     </property>
    </widget>
   </widget>
