--- a/PTI/SPCK/GUI/AdminPage.ui
+++ b/PTI/SPCK/GUI/AdminPage.ui
@@ -213,7 +213,7 @@ p, li { white-space: pre-wrap; }
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>110</x>
+      <x>100</x>
       <y>150</y>
       <width>211</width>
       <height>21</height>
@@ -225,7 +225,7 @@ p, li { white-space: pre-wrap; }
      </font>
     </property>
     <property name="text">
-     <string>Developer Test Release - Build 705</string>
+     <string>        RTM Release 2 - Build 1405</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
