--- a/PTI/SPCK/GUI/AdminPage.ui
+++ b/PTI/SPCK/GUI/AdminPage.ui
@@ -215,7 +215,7 @@ p, li { white-space: pre-wrap; }
      <rect>
       <x>100</x>
       <y>150</y>
-      <width>211</width>
+      <width>221</width>
       <height>21</height>
      </rect>
     </property>
@@ -225,7 +225,7 @@ p, li { white-space: pre-wrap; }
      </font>
     </property>
     <property name="text">
-     <string>        RTM Release 2 - Build 1405</string>
+     <string> Final Test Release - Build 1705.2000</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
