--- a/PTI/SPCK/GUI/about.ui
+++ b/PTI/SPCK/GUI/about.ui
@@ -76,7 +76,7 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>50</x>
+      <x>40</x>
       <y>130</y>
       <width>241</width>
       <height>31</height>
@@ -94,9 +94,9 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>50</x>
+      <x>40</x>
       <y>170</y>
-      <width>291</width>
+      <width>311</width>
       <height>51</height>
      </rect>
     </property>
@@ -106,13 +106,13 @@
      </font>
     </property>
     <property name="text">
-     <string>Version: RTM Release 2 - Build 1405.1620</string>
+     <string>Version: Final Test Release - Build 1705.2000</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>50</x>
+      <x>40</x>
       <y>230</y>
       <width>161</width>
       <height>21</height>
