--- a/PTI/SPCK/GUI/mainnote.ui
+++ b/PTI/SPCK/GUI/mainnote.ui
@@ -303,7 +303,7 @@ p, li { white-space: pre-wrap; }
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>170</x>
       <y>140</y>
       <width>221</width>
       <height>21</height>
@@ -315,7 +315,7 @@ p, li { white-space: pre-wrap; }
      </font>
     </property>
     <property name="text">
-     <string> Final Test Release - Build 1705.2000</string>
+     <string> Final Release - Build 8.0</string>
     </property>
    </widget>
    <zorder>line_2</zorder>
