--- a/PTI/SPCK/GUI/forgotPassword.ui
+++ b/PTI/SPCK/GUI/forgotPassword.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>460</width>
-    <height>315</height>
+    <height>392</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -36,7 +36,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>80</y>
+      <y>160</y>
       <width>201</width>
       <height>41</height>
      </rect>
@@ -54,7 +54,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>140</y>
+      <y>220</y>
       <width>201</width>
       <height>41</height>
      </rect>
@@ -72,7 +72,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>120</y>
+      <y>200</y>
       <width>341</width>
       <height>21</height>
      </rect>
@@ -85,7 +85,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>190</y>
+      <y>270</y>
       <width>341</width>
       <height>21</height>
      </rect>
@@ -98,7 +98,7 @@
     <property name="geometry">
      <rect>
       <x>190</x>
-      <y>250</y>
+      <y>330</y>
       <width>101</width>
       <height>41</height>
      </rect>
@@ -116,7 +116,7 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>210</y>
+      <y>290</y>
       <width>251</width>
       <height>41</height>
      </rect>
@@ -128,6 +128,37 @@
     </property>
     <property name="text">
      <string>* Keyboard format: English (United States)</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>100</y>
+      <width>201</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Enter your current password:</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="le_current">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>140</y>
+      <width>341</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="echoMode">
+     <enum>QLineEdit::Password</enum>
     </property>
    </widget>
   </widget>
