--- a/PTI/SPCK/GUI/editNote1.ui
+++ b/PTI/SPCK/GUI/editNote1.ui
@@ -14,7 +14,7 @@
    <string>Note for WOW! - Edit Page</string>
   </property>
   <property name="styleSheet">
-   <string notr="true"/>
+   <string notr="true">background-color: rgb(255, 243, 207);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLineEdit" name="lineEdit">
@@ -25,6 +25,9 @@
       <width>341</width>
       <height>21</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);</string>
     </property>
     <property name="placeholderText">
      <string>You can enter the Notes Page name here!</string>
@@ -63,6 +66,9 @@
       <pointsize>15</pointsize>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
     <property name="plainText">
      <string>Today is March 28....</string>
     </property>
@@ -88,6 +94,10 @@
      <string>Save changes</string>
     </property>
    </widget>
+   <zorder>label</zorder>
+   <zorder>lineEdit</zorder>
+   <zorder>plainTextEdit</zorder>
+   <zorder>bt_save</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
